--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 </p>
 <script>
 
-  // *** ENTER YOUR CODE HERE ***
+
+  // *p** ENTER YOUR CODE HERE ***
   // Create a list of Person objects as described in the README
   /*
   Jimmy Page, 62, 00821
